k8s/feed-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feed
  template:
    metadata:
      labels:
        app: feed
    spec:
      containers:
        - name: feed
          image: bshraib/fakelook-feed
          readinessProbe:
            httpGet:
              path: "/health-check"
              port: 5003
            initialDelaySeconds: 10
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: feed-srv
spec:
  selector:
    app: feed
  ports:
    - name: feed
      protocol: TCP
      port: 5003
      targetPort: 5003
