k8s/identity-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      labels:
        app: identity
    spec:
      containers:
        - name: identity
          image: bshraib/fakelook-identity:2.0
---
apiVersion: v1
kind: Service
metadata:
  name: identity-srv
spec:
  selector:
    app: identity
  ports:
    - name: identity
      protocol: TCP
      port: 5001
      targetPort: 5001
