k8s/identity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-deployment
  labels:
    app: identity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      labels:
        app: identity
    spec:
      containers:
        - name: identity
          image: mendelovic/fakelook-identity
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: identity-service
spec:
  selector:
    app: identity
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
      nodePort: 30001
