k8s/post-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post
  template:
    metadata:
      labels:
        app: post
    spec:
      containers:
        - name: post
          image: bshraib/fakelook-post:2.0
          readinessProbe:
            httpGet:
              path: "/health-check"
              port: 5002
            initialDelaySeconds: 10
            timeoutSeconds: 5
          # resources:
          #   limits:
          #     cpu: "500m"
          #     memory: "512Mi"
          #   requests:
          #     cpu: "250m"
          #     memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: post-srv
spec:
  selector:
    app: post
  ports:
    - name: post
      protocol: TCP
      port: 5002
      targetPort: 5002
