k8s/post.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-deployment
  labels:
    app: post
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post
  template:
    metadata:
      labels:
        app: post
    spec:
      containers:
        - name: post
          image: mendelovic/fakelook-post
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: post-service
spec:
  selector:
    app: post
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
      nodePort: 30002
